// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UIButton should display the loading correctly 1`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 pointer-events-none focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  <span
    class="loader"
  >
    
    <transition-stub>
      <div
        class="ui-spinner-loader indeterminate mx-auto"
        role="progressbar"
      >
        <svg
          class="spinner-draw stroke-current"
          focusable="false"
          preserveAspectRatio="xMidYMid"
          style="width: 25px; height: 25px;"
          viewBox="0 0 25 25"
        >
          <circle
            class="spinner-circle stroke-current"
            cx="50%"
            cy="50%"
            r="11.5"
            stroke-width="2px"
            style="stroke-dashoffset: 72.25663103256524px; stroke-dasharray: 72.25663103256524px; --spinner-start-value: 68.64379948093698; --spinner-end-value: 14.451326206513048;"
          />
        </svg>
        <!--v-if-->
      </div>
    </transition-stub>
    
  </span>
</button>
`;

exports[`UIButton should render correctly 1`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 2`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 3`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 4`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 5`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 6`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 7`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 8`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 9`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 10`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 11`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 12`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 13`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 14`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 15`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 16`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 17`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 18`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 19`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 20`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 21`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 22`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 23`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 24`] = `
<button
  class="border border-gray-300 text-gray-900 bg-white disabled:bg-gray-300 ring-gray-600 dark:bg-gray-750 dark:shadow-gray-600 dark:text-white dark:border-gray-600 hover:bg-gray-300 hover:border-gray-300 dark:hover:bg-gray-800 dark:hover:border-gray-800 shadow-sm px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 25`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 26`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 27`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 28`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 29`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 30`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 31`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 32`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 33`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 34`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 35`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 36`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 37`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 38`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 39`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 40`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 41`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 42`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 43`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 44`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 45`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 46`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 47`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 48`] = `
<button
  class="border text-gray-600 dark:text-gray-400 border-gray-400 disabled:bg-gray-300 ring-gray-600 dark:hover:bg-gray-800 dark:hover:text-gray-200 dark:hover:border-gray-800 hover:bg-white shadow-sm focus:ring-offset-2 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 49`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 50`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 51`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 52`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 53`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 54`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 55`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 56`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 57`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 58`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 59`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 60`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 61`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 62`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 63`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 64`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 65`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 66`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 67`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 68`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 69`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 70`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 71`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 72`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 73`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 74`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 75`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 76`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 77`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 78`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 79`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 80`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 81`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 82`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 83`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 84`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 85`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 86`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 87`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 88`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 89`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 90`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 91`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 92`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 93`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 94`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 95`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;

exports[`UIButton should render correctly 96`] = `
<button
  class="border text-gray-600 dark:text-gray-400 ring-gray-300 border-transparent dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-800 px-3.5 py-2 focus:ring-2 ui-button rounded font-bold text-sm m-0 focus:outline-none ring-0 disabled:cursor-not-allowed disabled:shadow-none"
  type="button"
>
  
  click me!
  
</button>
`;
